# silo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md  install.sh  reinstall.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: guide-claude-code-providers.md  guide-claude-code-providers_zh.md  guide-tool-setup.md  guide-tool-setup_zh.md
docs/superpowers/plans/: 2026-03-29-ai-cli-env-isolation-implementation.md  2026-03-31-aienv-completion.md
docs/superpowers/specs/: 2026-03-28-ai-cli-env-isolation-design.md  2026-03-31-aienv-completion-design.md
src/: cli.rs  env_path.rs  error.rs  lib.rs  main.rs  manifest.rs  path_policy.rs  runtime_env.rs  secrets.rs
src/commands/: exec.rs  init.rs  ls.rs  mod.rs  setup.rs  shell.rs  show.rs
tests/: cli_help.rs  exec_env.rs  init_command.rs  manifest_parsing.rs  setup_command.rs  shell_command.rs
