[package]
name = "aienv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
